# finpipe

./: .dockerignore  .gitignore  DEPLOY.md  Makefile  README.md  cloudflared.md  desc.md  local-cloudflare-dev.txt  main.py  pyproject.toml
backend/: .gitignore  README.md  auth.py  config.py  db.py  pyproject.toml  seed_redis.py
backend/api/: app.py  deps.py
backend/api/internal/: health.py
backend/api/routes/: auth.py  internal.py  positions.py  users.py  ws.py
backend/control/: main.py
backend/core/: auth.py  db.py  enrichment.py  market.py  state.py
backend/pipeline/: relay.py
backend/server/: logging_config.py
backend/server/pipeline/: relay.py
backend/sql/: 001_create_schema.sql
backend/streaming/: control.py  ingest.py  massive.py  relay.py
backend/tools/: seed_redis.py
common/: README.md  pyproject.toml
common/common/: market.py  postgres.py  redis_keys.py  schemas.py
dagster/: .env.example  README.md  REDESIGN.md  backfill.py  close_of_day.py  dagster_backfill.py  definitions.py  env.example  main.py  pyproject.toml  setup.py  setup.sh  setup_aws.py  test_spark.py
dagster/.tmp_dagster_home_8nlulsh2/history/: runs.db
dagster/.tmp_dagster_home_8nlulsh2/history/runs/: .db  index.db
dagster/.tmp_dagster_home_8nlulsh2/schedules/: schedules.db
dagster/.tmp_dagster_home_lsf4gwv6/history/: runs.db
dagster/.tmp_dagster_home_lsf4gwv6/history/runs/: .db  index.db
dagster/.tmp_dagster_home_lsf4gwv6/schedules/: schedules.db
dagster/.tmp_dagster_home_rv0fsn_v/history/: runs.db
dagster/.tmp_dagster_home_rv0fsn_v/history/runs/: .db  18d2e33d-2493-4518-a305-0ee92f805e8c.db  index.db
dagster/.tmp_dagster_home_rv0fsn_v/schedules/: schedules.db
dagster/.tmp_dagster_home_rv0fsn_v/storage/18d2e33d-2493-4518-a305-0ee92f805e8c/compute_logs/: iutnwcha.err
dagster/.tmp_dagster_home_v1j73wsl/history/: runs.db
dagster/.tmp_dagster_home_v1j73wsl/history/runs/: .db  9423ec3a-9aea-4ede-8cb0-9951fc95551d.db  index.db
dagster/.tmp_dagster_home_v1j73wsl/schedules/: schedules.db
dagster/.tmp_dagster_home_v1j73wsl/storage/9423ec3a-9aea-4ede-8cb0-9951fc95551d/compute_logs/: anjwehja.err  anjwehja.out
dagster/assets/: __init__.py  bronze_minute_aggs.py  close_of_day.py  silver_minute_aggs.py
dagster/batch/: main.py  prov.py
dagster/jobs/: __init__.py  backfill.py  close_of_day.py  daily_lakehouse.py
dagster/pipelines/: __init__.py  definitions.py  jobs.py  resources.py  sensors.py  setup.py
dagster/pipelines/assets/: __init__.py  bronze.py  bronze_minute_aggs.py  equity_bronze_minute_aggs.py  equity_silver_minute_aggs.py  silver.py  silver_minute_aggs.py
dagster/pipelines/jobs/: __init__.py  backfill.py  silver_ticker.py
dagster/pipelines/resources/: __init__.py  massive_s3.py  minio.py  spark.py
dagster/pipelines/sensors/: __init__.py  daily_massive_s3.py  massive_s3.py
dagster/pipelines/transforms/: __init__.py  enrich_minute_aggs.py  ingest_minute_aggs.py  write.py
dagster/resources/: __init__.py  emr.py  massive_api.py  massive_s3.py  postgres.py  redis.py
dagster/sensors/: __init__.py  daily_ingest.py
dagster/spark/: bronze_to_silver.py  staged_to_bronze.py  test_one_file.py  test_ten_files.py
dagster/tests/: test_resources.py
dagster/transforms/: __init__.py
deploy/: README.md  compose.yaml  compose.yml  docker-compose.yml  env.example  pyproject.toml  up.sh  workspace.yaml
deploy/.github/workflows/: deploy.yml
deploy/aws/: aws.md  config.py  rds.py  valkey.py
deploy/aws/ec2/: iam.py  instance.py  sg.py
deploy/aws/ec2/backfill/: iam.py  instance.py  sg.py
deploy/aws/ec2/control/: iam.py  instance.py  sg.py
deploy/aws/ec2/dagster/: iam.py  instance.py  sg.py
deploy/aws/ecs/: cluster.py  iam.py  logs.py  service.py  sg.py  task.py
deploy/aws/rds/: instance.py  sg.py  subnet.py
deploy/aws/valkey/: instance.py  sg.py  subnet.py
deploy/backend/: .env.example  Dockerfile  docker-compose.yml
deploy/backfill/: prov.py
deploy/compose/: docker-compose.yml
deploy/dagster/: .gitignore  Dockerfile  docker-compose.yml  workspace.yaml
deploy/dagster-config/: dagster.yaml
deploy/dagster/pipelines/: definitions.py
deploy/docker/: Dockerfile  Dockerfile.dagster  Dockerfile.streaming
deploy/dockerfiles/: dagster.Dockerfile  python.Dockerfile
deploy/dockerfiles/dagster-config/: workspace.yaml
deploy/ec2/: .env.example  cloudflared-config.yml  docker-compose.yml  setup.py  setup_aws.py  user-data.sh
deploy/host/: bootstrap.sh  deploy.sh  env.example  finpipe.service  load_secrets.sh  up.sh
deploy/ingestion/: Dockerfile
deploy/local/: .env.example  docker-compose.yml
deploy/secrets/: .env.example  load_secrets.sh
frontend/: README.md  index.html  package-lock.json  package.json  wrangler.json
infra/: README.md  config.py
infra/rds/: sg.py  (+2 more)
ingestion/: pyproject.toml
lakehouse/: .env.example  README.md  docker-compose.yml
mcp/: README.md  db.py  export.py  pyproject.toml  server.py
stream/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
tests/: README.md  massive_s3_tests.py
ui/: .env.example  package-lock.json  package.json  wrangler.json  wrangler.toml
(+93 files in other folders)
