[project]
name = "finpipe"
version = "0.1.0"
description = "Financial data platform — backend API, data ingestion, orchestration, and frontend"
requires-python = ">=3.12"
dependencies = ["boto3"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infra*"]

[tool.uv.workspace]
members = ["backend", "dagster", "common"]
