[project]
name = "finpipe-backend"
version = "0.1.0"
description = "FastAPI backend — REST API, WebSocket relay, data pipeline, and ingestion"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "massive>=2.3.2",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "uvicorn>=0.34.0",
    "websockets>=13.0",
    "pandas-market-calendars>=5.3.1.2",
    "slowapi>=0.1.9",
    "pyarrow>=18.0",
    "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "pipeline", "streaming", "control"]
