[project]
name = "finpipe-common"
version = "0.1.0"
description = "Shared constants, schemas, and helpers for finpipe backend and dagster"
requires-python = ">=3.12"
dependencies = [
    "pandas-market-calendars>=5.3.1.2",
    "massive>=2.3.2",
    "pyarrow>=18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
