[project]
name = "finpy-dagster"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.28",
    "dagster>=1.12.10",
    "dagster-webserver>=1.12.10",
    "grpcio>=1.48.1",
    "grpcio-status>=1.48.1",
    "httpx>=0.28.1",
    "pandas>=2.2.0",
    "pyarrow>=22.0.0",
    "pyspark[connect]>=3.5.5",
    "python-dotenv>=1.2.1",
    "trino>=0.336.0",
]

[tool.dagster]
module_name = "pipelines.definitions"
