[project]
name = "finpipe-dagster"
version = "0.1.0"
description = "Dagster pipelines and batch ingestion"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=18.0",
    "boto3>=1.35",
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "pendulum>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
