[project]
name = "finpipe-deploy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.11",
    "dagster-postgres>=0.24.11",
    "dagster-webserver>=1.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]

[tool.dagster]
module_name = "pipelines.definitions"
code_location_name = "pipelines"
