[project]
name = "finpipe-ingestion"
version = "0.1.0"
description = "Data ingestion — streaming (Massive WS → Kafka) and batch (S3 historical backfill)"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.31.0",
    "massive>=2.3.2",
    "redis>=5.0.0",
    "pyarrow>=18.0",
    "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streaming", "control", "batch"]
